# col-spanish

./: LICENSE  README.md  README.rst  api_reference.md  pyproject.toml  setup.py
col-spanish/: README.md  README.rst  pyproject.toml  setup.py
col-spanish/col_spanish/: __init__.py  col_spanish.py
col-spanish/col_spanish.egg-info/: SOURCES.txt  top_level.txt
col-spanish/tests/: test_col_spanish.py
col_spanish/: __init__.py  col_spanish.py  encrypt.py
col_spanish.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_col_spanish.py
